[tool.poetry]
name = "knowledge-graph-rag-application"
version = "0.1.0"
description = "This repository focus on implementing a RAG based  application by using Knowledge graph as the knowledge base l"
authors = ["Shine <shine160700@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.16"
llama-index = "^0.11.8"
langchain-experimental = "^0.0.65"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
json-repair = "^0.29.2"
langchain-openai = "^0.1.23"
neo4j = "^5.24.0"
llama-index-graph-stores-neo4j = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
